--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.41.1
-pandas>=2.2.0
-plotly>=5.24.0
-yahoo-fantasy-api>=2.9.1
-yahoo-oauth>=2.1.1 
+streamlit==1.41.1
+pandas==2.2.0
+plotly==5.24.0
+yahoo-fantasy-api==2.9.1
+yahoo-oauth==2.1.1 
